debug alarm error